--- a/app.html
+++ b/app.html
@@ -144,6 +144,7 @@
       </div>
       <div class="muted customer-address"></div>
       <div class="muted customer-phone"></div>
+      <div class="muted customer-date"></div>
       <div class="row end gap">
         <button class="btn small" data-action="edit">Edit</button>
         <button class="btn small danger" data-action="delete">Delete</button>
@@ -159,6 +160,7 @@
       <div class="muted">Stitching: <span class="bill-stitching"></span></div>
       <div class="muted">Balance: <span class="bill-balance"></span></div>
       <div class="muted">Status: <span class="bill-status"></span></div>
+      <div class="muted bill-date"></div>
       <div class="bill-thumb">
         <img class="bill-image" alt="bill" />
       </div>
